# python-sample-poetry-lib

./: README.md  pyproject.toml
src/python_sample_poetry_lib/: __init__.py  sub.py
