[tool.poetry]
name = "python-sample-poetry-lib"
version = "0.1.0"
description = "python sample poetry lib"
authors = ["Rem_"]
license = "MIT"
packages = [
    {include = "python_sample_poetry_lib", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
